tests/baselines/reference/functionOverloadImplementationOfWrongName.errors.txt
tests/cases/compiler/functionOverloadImplementationOfWrongName.ts(3,10): error TS2389: Function implementation name must be 'foo'.


==== tests/cases/compiler/functionOverloadImplementationOfWrongName.ts (1 errors) ====
    function foo(x);
    function foo(x, y);
    function bar() { }
             ~~~
!!! error TS2389: Function implementation name must be 'foo'.